Allow lookup in root context

--- a/test/fixtures/expectations/parent-context.html
+++ b/test/fixtures/expectations/parent-context.html
@@ -2,7 +2,7 @@
 <div>
   <ul>
     
-    <li>Dave 2014-07-01 - foo</li>
+    <li>Learn you haskell for great good Dave 2014-07-01 - foo</li>
     
   </ul>
 </div>
